--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,1 +1,10 @@
 <h1><%= @student.to_s %></h1>
+<!-- This student is currently inactive. -->
+
+<% if @student.active == true %>
+  <p> This student is currently active.</p>
+<% end %>
+
+<% if @student.active == false %>
+  <p> This student is currently inactive. </p>
+<% end %>
