--- a/app/views/students/show.html.erb
+++ b/app/views/students/show.html.erb
@@ -1,6 +1,7 @@
 <h1><%= @student.to_s %></h1>
-<% if @student.active %>
-<h2>This student is currently inactive.</h2>
-<% else %>
-<h2>This student is currently active.</h2>
+<% if @student.active == false %>
+<%= "This student is currently inactive." %>
+<% else  %>
+<%= "This student is currently active." %>
 <% end %>
+
