--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,7 @@
-<div>
+<<div>
+<ul>
   <% @students.each do |student| %>
-    <div><%= student.first_name + " " + student.last_name %></div>
+    <li><%= link_to student.to_s, student_path(student.id)%></li>
   <% end %>
+</ul>
 </div>
